--- a/app/src/main/res/layout/activity_cars.xml
+++ b/app/src/main/res/layout/activity_cars.xml
@@ -23,9 +23,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Questions"
+        android:textAllCaps="true"
         android:textColor="@android:color/black"
-        android:textSize="25sp"
-        android:textAllCaps="true"/>
+        android:textSize="25sp"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -35,37 +35,38 @@
         android:textSize="20sp"/>
 
     <RadioGroup
+        android:id="@+id/electric"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
         <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="15sp"
-            android:textColor="@android:color/black"
             android:id="@+id/year"
-            android:text="1973"/>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="1973"
+            android:textColor="@android:color/black"
+            android:textSize="15sp"/>
 
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="15sp"
+            android:text="1985"
             android:textColor="@android:color/black"
-            android:text="1985"/>
+            android:textSize="15sp"/>
 
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="15sp"
+            android:text="1967"
             android:textColor="@android:color/black"
-            android:text="1967"/>
+            android:textSize="15sp"/>
 
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="15sp"
+            android:text="2014"
             android:textColor="@android:color/black"
-            android:text="2014"/>
+            android:textSize="15sp"/>
 
     </RadioGroup>
 
@@ -77,37 +78,38 @@
         android:textSize="20sp"/>
 
     <RadioGroup
+        android:id="@+id/cars"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="15sp"
+            android:text="Hennessy Venom GT"
             android:textColor="@android:color/black"
-            android:text="Hennessy Venom GT"/>
+            android:textSize="15sp"/>
 
         <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="15sp"
-            android:textColor="@android:color/black"
             android:id="@+id/fast"
-            android:text="Bugatti Veyron Super Sport"/>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Bugatti Veyron Super Sport"
+            android:textColor="@android:color/black"
+            android:textSize="15sp"/>
 
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="15sp"
+            android:text="McLaren F1"
             android:textColor="@android:color/black"
-            android:text="McLaren F1"/>
+            android:textSize="15sp"/>
 
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="15sp"
+            android:text=" Ferrari F40 "
             android:textColor="@android:color/black"
-            android:text=" Ferrari F40 "/>
+            android:textSize="15sp"/>
 
     </RadioGroup>
 
@@ -119,36 +121,38 @@
         android:textSize="20sp"/>
 
     <RadioGroup
+        android:id="@+id/amg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="15sp"
+            android:text="Bill Gates and   Larry Page "
             android:textColor="@android:color/black"
-            android:text="Bill Gates and   Larry Page "/>
+            android:textSize="15sp"/>
 
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="15sp"
+            android:text="Bayerische Motoren Werke and Warren Buffet"
             android:textColor="@android:color/black"
-            android:text="Bayerische Motoren Werke and Warren Buffet"/>
+            android:textSize="15sp"/>
+
+        <RadioButton
+            android:id="@+id/founder"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Hans-Werner Aufrecht  and  Erhard Melcher"
+            android:textColor="@android:color/black"
+            android:textSize="15sp"/>
 
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="15sp"
+            android:text="Enzo Anselmo Ferrari and Kiichiro Toyoda"
             android:textColor="@android:color/black"
-            android:text="Hans-Werner Aufrecht  and  Erhard Melcher"/>
-
-        <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="15sp"
-            android:textColor="@android:color/black"
-            android:text="Enzo Anselmo Ferrari and Kiichiro Toyoda"/>
+            android:textSize="15sp"/>
 
     </RadioGroup>
 
@@ -160,36 +164,38 @@
         android:textSize="20sp"/>
 
     <RadioGroup
+        android:id="@+id/expensive"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="15sp"
+            android:text="Lamborghini Veneno Roadster "
             android:textColor="@android:color/black"
-            android:text="Lamborghini Veneno Roadster "/>
+            android:textSize="15sp"/>
 
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="15sp"
+            android:text="Lykan HyperSport "
             android:textColor="@android:color/black"
-            android:text="Lykan HyperSport "/>
+            android:textSize="15sp"/>
 
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="15sp"
+            android:text="Bugatti Veyron Grand Sport Vitesse"
             android:textColor="@android:color/black"
-            android:text="Bugatti Veyron Grand Sport Vitesse"/>
+            android:textSize="15sp"/>
 
         <RadioButton
+            android:id="@+id/most"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="15sp"
+            android:text="Koenigsegg CCXR Trevita"
             android:textColor="@android:color/black"
-            android:text="Koenigsegg CCXR Trevita"/>
+            android:textSize="15sp"/>
 
     </RadioGroup>
 
@@ -202,42 +208,45 @@
         android:textSize="20sp"/>
 
     <RadioGroup
+        android:id="@+id/built"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
         <RadioButton
+            android:id="@+id/carPlant"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="15sp"
+            android:text="Port Elizabeth"
             android:textColor="@android:color/black"
-            android:text="Port Elizabeth"/>
+            android:textSize="15sp"/>
 
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="15sp"
+            android:text="Pretoria"
             android:textColor="@android:color/black"
-            android:text="Pretoria"/>
+            android:textSize="15sp"/>
 
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="15sp"
+            android:text="Durban"
             android:textColor="@android:color/black"
-            android:text="Durban"/>
+            android:textSize="15sp"/>
 
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="15sp"
+            android:text="Cape Town"
             android:textColor="@android:color/black"
-            android:text="Cape Town"/>
+            android:textSize="15sp"/>
 
     </RadioGroup>
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:onClick="quizAnswer"
         android:text="submit"
         android:textColor="@android:color/black"
         android:textSize="25sp"/>
