--- a/app/src/main/res/layout/activity_quiz_app.xml
+++ b/app/src/main/res/layout/activity_quiz_app.xml
@@ -3,63 +3,80 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_weight="1"
+    android:background="#008B8B"
     android:paddingBottom="0dp"
     android:paddingLeft="0dp"
     android:paddingRight="0dp"
     android:paddingTop="0dp"
     tools:context="com.example.android.quizapp.QuizApp">
 
-
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
         android:orientation="vertical">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/tittle"
-            android:textAllCaps="true"
-            android:textSize="25sp" />
 
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:scaleType="center"
-            android:src="@drawable/quiz" />
+            android:layout_weight="1"
+            android:scaleType="centerCrop"
+            android:src="@drawable/qquis" />
 
         <TextView
-            android:layout_width="match_parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+            android:layout_weight="1"
+        android:text="@string/tittle"
+        android:textAllCaps="true"
+        android:textColor="#FFFF00"
+        android:textSize="30sp"/>
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="@string/topics"
-            android:textAllCaps="true" />
+            android:textAllCaps="true"
+            android:textColor="#FF6347"
+            android:textSize="20sp"/>
+
 
         <RadioGroup
             android:id="@+id/radiogroup"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1">
 
             <RadioButton
                 android:id="@+id/politics"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/politics" />
+                android:layout_weight="1"
+                android:text="@string/politics"
+                android:textColor="#FFFAFA"/>
 
             <RadioButton
                 android:id="@+id/cars"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/cars" />
+                android:layout_weight="1"
+                android:text="@string/cars"
+                android:textColor="#FFFAFA"/>
 
             <RadioButton
                 android:id="@+id/sport"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/sport" />
+                android:layout_weight="1"
+                android:text="@string/sport"
+                android:textColor="#FFFAFA"/>
 
         </RadioGroup>
 
     </LinearLayout>
 
 </RelativeLayout>
+
